# nt-crtless-runtime

./: .gitmodules  CMakeLists.txt  README.md
cmake/: gnu-final.ld  gnu-link.cmake  minimal-build-settings.cmake  override-link-rules.cmake
include/: cstdio  stdio.h
src/: fltused.cc  memory.cc  nt_misc.cc  string.cc
